Fix spacing on mobile

--- a/www/css/moode.css
+++ b/www/css/moode.css
@@ -209,8 +209,8 @@ li.modal-dropdown-text:focus {color:#eee;}
 	#togglebtns .btn-group .btn i {min-width:1.25rem;}
 	#playbtns, #togglebtns/*, .volume-popup-btn-*/ {display:block;}
 	.coverview {display:none;}
-	#currentsong {font-size:1.5em;font-weight:bold;padding-top:0}
-	#currentalbum {font-size:1.35em;margin-bottom:1.25em;}
+	#currentsong {font-size:1.5em;font-weight:bold;}
+	#currentalbum {font-size:1.35em;}
 	#timeline {display:block;width:74vw;}
 	#mobile-time {display:block;}
 	.btn btn-cmd btn-toggle {font-size:.75em;}
